# 2-10-pygame-patterns-RibbonEyes1

./: README.md  main.py  patterns.py  pyproject.toml
