[tool.poetry]
name = "repl-nix-2-10-pygame-patterns-ribboneyes1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_2_10_pygame_patterns_ribboneyes1"}]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
